--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
+    <title>IMUNAL</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon"/>
 </head>
@@ -15,6 +16,9 @@
     <div id="links">
         <a class="link" href="" target="_blank">Form Pendaftaran</a>
         <a class="link" href="" target="_blank">WhatsApp</a>
+    </div>
+    <div id="picture">
+        <img src="/pic1.png" alt="Nyaman vaksin di rumah bersama imunal">
     </div>
 
     <!-- Javascript -->
