--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 
 <body>
-    <img id="userPhoto" src="/imunalbanner.jpg" alt="Imunal Logo">
+    <img id="userPhoto" src="/Imunal.jpg" alt="Imunal Logo">
     
-    <a href="https://www.instagram.com/imunal.id" id="userName">Vaksinasi Nyaman & Aman Di Rumah</a>
+    <a href="https://www.instagram.com/imunal.id" id="userName">Vaksin Nyaman & Aman di Rumah</a>
     <div id="links">
         <a class="link" href="" target="_blank">Form Pendaftaran</a>
         <a class="link" href="" target="_blank">WhatsApp</a>
     </div>
-
+    
     <!-- Javascript -->
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
     <script  src="index.js"></script>
