--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 
 <body>
-    <img id="userPhoto" src="/Imunal.jpg" alt="Imunal Logo">
+    <img id="userPhoto" src="https://imgur.com/8nDLPzQ.jpg" alt="Imunal Logo">
     
-    <a href="https://www.instagram.com/imunal.id" id="userName">Vaksin Nyaman & Aman di Rumah</a>
+    <a href="https://www.instagram.com/imunal.id" id="userName">Imunisasi Andal</a>
     <div id="links">
         <a class="link" href="" target="_blank">Form Pendaftaran</a>
-        <a class="link" href="" target="_blank">WhatsApp</a>
+        <a class="link" href="" target="_blank">Hubungi Kami</a>
     </div>
     
     <!-- Javascript -->
