--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <img id="userPhoto" src="https://imgur.com/8nDLPzQ.jpg" alt="Imunal Logo">
+    <img id="userPhoto" src="/imunaltype.jpg" alt="Imunal Logo">
     
     <a href="https://www.instagram.com/imunal.id" id="userName">Imunisasi Andal</a>
     <div id="links">
